<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profileInfo.ProfileInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdatePersonInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_first_name_text"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/primary_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/firstNameLayout"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/firstNameLayout" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameLayout"
            style="@style/textInputOuterFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/lastNameLayout"
            app:layout_constraintStart_toStartOf="@+id/lastNameLayout"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstName"
                style="@style/textInputInnerFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_first_name_text"
                android:fontFamily="@font/inter_regular"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/person_last_name_text"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/primary_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/lastNameLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lastNameLayout" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameLayout"
            style="@style/textInputOuterFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/firstNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName"
                style="@style/textInputInnerFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/person_last_name_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_mail_text"
            android:textColor="@color/primary_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/inter_bold"
            app:layout_constraintBottom_toBottomOf="@+id/emailLayout"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/emailLayout" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/textInputOuterFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/lastNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/textInputInnerFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_mail_text"
                android:fontFamily="@font/inter_regular"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnUpdatePersonInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/update_text"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancel" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/cancel_button_color"
        android:text="@string/cancel_text"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintBottom_toBottomOf="@+id/btnUpdatePersonInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnUpdatePersonInfo" />


</androidx.constraintlayout.widget.ConstraintLayout>